# pestvsnom

./: Cargo.toml  README.md  build.rs
assets/: data.json
benches/: faster_pest.rs  full_pest.rs  nom.rs  nom7.rs  nom_f64.rs  nom_spans.rs  pest.rs  serde_json.rs  ujson4c.rs
src/: lib.rs
tests/: faster_pest.rs  nom.rs  nom7.rs  nom_spans.rs  pest.rs
