[package]
name = "pestvsnom"
version = "0.1.0"
edition = "2021"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]

[dependencies]
libc = "^0.2"

[build-dependencies]
gcc = "^0.3"

[dev-dependencies]
pest = "^2"
faster-pest = { path="../pest-based-parser/faster-pest" }
faster-pest-derive = { path="../pest-based-parser/faster-pest-derive" }
pest_grammars = "^2"
nom = "^7"
old_nom = { version="^4", package = "nom" }
serde_json = "1.0"
